# openni2_windows

./: .gitignore  README.md
CMake/: SetupBuildEnvironment.cmake
Ni2CameraMatrix/: CMakeLists.txt  Ni2CameraMatrix.sln
Ni2CameraMatrix/Ni2CameraMatrix/: Ni2CameraMatrix.cpp  Ni2CameraMatrix.h  Ni2CameraMatrix.rc  Ni2CameraMatrix.vcxproj  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
Ni2CameraMatrix/Source/: Ni2CameraMatrix.cpp  Ni2CameraMatrix.h
Ni2GetSerialNumber/: CMakeLists.txt  Ni2GetSerialNumber.sln
Ni2GetSerialNumber/Ni2GetSerialNumber/: Ni2GetSerialNumber.cpp  Ni2GetSerialNumber.h  Ni2GetSerialNumber.rc  Ni2GetSerialNumber.vcxproj  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
Ni2GetSerialNumber/Source/: Ni2GetSerialNumber.cpp
Ni2ImuReader/: Ni2ImuReader.sln  README.md
Ni2ImuReader/Ni2ImuReader/: Ni2ImuReader.cpp  Ni2ImuReader.rc  Ni2ImuReader.vcxproj  resource.h  stdafx.cpp
Ni2PointCloud/: CMakeLists.txt
Ni2PointCloud/Ni2PointCloud/: Ni2PointCloud.cpp  Ni2PointCloud.rc  Ni2PointCloud.vcxproj  ReadMe.txt  resource.h  stdafx.cpp
Ni2PointCloud/Source/: Ni2PointCloud.cpp
Ni2Recorder/: CMakeLists.txt  Ni2Recorder.sln
Ni2Recorder/Ni2Recorder/: Ni2Recorder.cpp  Ni2Recorder.vcxproj  stdafx.cpp  stdafx.h
Ni2Recorder/Source/: Ni2Recorder.cpp
Ni2SimpleViewer/: CMakeLists.txt  Ni2SimpleViewer.sln
Ni2SimpleViewer/Ni2SimpleViewer/: Ni2SimpleViewer.cpp  Ni2SimpleViewer.rc  Ni2SimpleViewer.vcxproj  stdafx.h
Ni2SimpleViewer/Source/: Ni2SimpleViewer.cpp
Ni2WPFViewer/: Ni2WPFViewer.sln  README.md
Ni2WPFViewer/Ni2WPFViewer/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Ni2WPFViewer.csproj
Ni2WPFViewer/Ni2WPFViewer/Ni2Wrapper.Net/x64/Debug/: OpenNI.ini
Ni2WPFViewer/Ni2WPFViewer/Ni2Wrapper.Net/x86/Debug/: NiWrapper.Net - LICENSE.txt
Ni2WPFViewer/Ni2WPFViewer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
